--- a/subpages/bio.html
+++ b/subpages/bio.html
@@ -5,19 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Karen Song's Personal Site</title>
+    <title>Bio | Karen Song</title>
 </head>
 <div class="p-5">
-    <h1>Karen Song</h1>
+    <h1>Bio</h1>
+    <div width="30%">
     <h5>
-        <ul>
-            <li><a href="subpages/bio.html">Bio</a></li>
-            <li>Writing</li>
-            <li>Projects</li>
-            <li>Photography</li>
-            <li>Blog</li>
-            <li>Reading List</li>
-        </ul>
+      I'm a junior studying, among other subjects, Applied Math & Economics at Harvard. I'm also trying to get a language citation in German, we'll see how that goes. 
+      I was born and raised in the Washington, D.C. metro area (for those more acquainted, the "DMV"). 
+
     </h5>
+</div>
 </div>
 </html>
