--- a/subpages/bio.html
+++ b/subpages/bio.html
@@ -9,7 +9,7 @@
 </head>
 <div class="p-5">
     <h1>Bio</h1>
-    <div width="30%">
+    <div width="40vw">
     <h5>
       I'm a junior studying, among other subjects, Applied Math & Economics at Harvard. I'm also trying to get a language citation in German, we'll see how that goes. 
       I was born and raised in the Washington, D.C. metro area (for those more acquainted, the "DMV"). 
